feat: add translation, devtools and more modules

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -40,6 +40,7 @@
     "updatedBy": "Dernière modification par ",
     "invalidFormat": "Format invalide",
     "seeMore": "Voir plus ...",
-    "all": "Tous"
+    "all": "Tous",
+    "createdBy": "créé par"
   }
 }
