chore: add plugins

--- a/locales/en.json
+++ b/locales/en.json
@@ -56,7 +56,8 @@
       "servers": "Servers",
       "about": "About",
       "admin": "Administration",
-      "create": "Create"
+      "create": "Create",
+      "search": "Search"
     }
   }
 }
