--- a/locales/fr.json
+++ b/locales/fr.json
@@ -56,7 +56,8 @@
       "servers": "Serveurs",
       "about": "A propos",
       "admin": "Administration",
-      "create": "Créer"
+      "create": "Créer",
+      "search": "Rechercher"
     }
   }
 }
