fix: feedbacks view

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,6 +8,7 @@
     "sign-in": "Se connecter",
     "sign-up": "S'inscrire",
     "actions": "Actions",
+    "readMore": "Lire la suite",
     "link": "Lien",
     "title": "Titre",
     "type": "Type",
