--- a/locales/en.json
+++ b/locales/en.json
@@ -8,6 +8,7 @@
     "sign-in": "Sign in",
     "sign-up": "Sign up",
     "actions": "Actions",
+    "readMore": "Read more",
     "link": "Link",
     "title": "Title",
     "type": "Type",
