--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
   "global": {
+    "error.message": "An error has occurred, sorry for the inconvenience.",
     "submit": "Submit",
     "username": "Username",
     "email": "Email",
@@ -57,9 +58,35 @@
     "all": "All",
     "createdBy": "created by",
     "all_right_reserved": "All rights reserved",
+    "form": {
+      "feedback": {
+        "successTitle": "Feedback sent successfully",
+        "successMessage": "Your feedback has been sent successfully, thank you for your contribution.",
+        "errorTitle": "Error sending feedback"
+      },
+      "title": {
+        "label": "Title",
+        "error": "The title is required"
+      },
+      "description": {
+        "label": "Description",
+        "error": "The description is required, and must be at least 20 characters"
+      },
+      "targetApp": {
+        "label": "Target application",
+        "error": "The target application is required"
+      },
+      "type": {
+        "label": "Type",
+        "error": "The type is required"
+      }
+    },
     "user": {
       "basicInfos": "Basic informations",
       "isNotVerify": "Your account is not verified, please check your emails.",
+      "isNotMinecraftVerify": "Your account is not verified with minecraft.",
+      "isNotMinecraftVerify_explain": "To verify your account, connect to the server with the ip :",
+      "isNotMinecraftVerify_explain_next": "And enter the command :",
       "isNotVerify2": "Please verify your account to get access to all features.",
       "isNotVerifyEmail": "Don't forget to check your spam folder! Don't received the email?",
       "isNotVerifyResend": "Resend verification email",
@@ -67,6 +94,9 @@
       "emailVerify": {
         "confirm": "Your account has been verified."
       }
+    },
+    "feedbackPage": {
+      "create": "Create a feedback"
     },
     "feedbacksInfos": {
       "statuses": {
