feat: create feedback info page and action to accept and refuse

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,7 @@
 {
   "global": {
+    "refuse": "Refuse",
+    "accept": "Accept",
     "copied": "Copied!",
     "error.message": "An error has occurred, sorry for the inconvenience.",
     "submit": "Submit",
