feat: create news and resources components

--- a/locales/en.json
+++ b/locales/en.json
@@ -27,6 +27,8 @@
     "other": "Other",
     "feedback": "Feedback",
     "feedbacks": "Feedbacks",
+    "resource": "Resource",
+    "resources": "Resources",
     "link": "Link",
     "title": "Title",
     "type": "Type",
