--- a/locales/fr.json
+++ b/locales/fr.json
@@ -27,6 +27,8 @@
     "other": "Autre",
     "feedback": "Suggestion",
     "feedbacks": "Suggestions",
+    "resource": "Ressource",
+    "resources": "Ressources",
     "link": "Lien",
     "title": "Titre",
     "type": "Type",
